--- a/index.html
+++ b/index.html
@@ -3,67 +3,44 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="vendor/normalize.css" />
-		<link rel="stylesheet" href="vendor/fontawesome/fontawesome.css" />
-		<link
-			href="https://fonts.googleapis.com/css?family=Livvic&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="stylesheet" href="sass/main.css" />
-		<title>Merge Sort Visualization</title>
+		<link rel="stylesheet" href="merge_style.css" />
 	</head>
 
 	<body>
-		<div id="settings">
-			<div class="menu-header">
-				<div id="close-menu">
-					<i class="fas fa-times"></i>
-				</div>
-				<h2>Settings</h2>
+		<title>Merge Sort Visualization</title>
+
+		<div class="settings">
+
+				<h2>Array to sort:</h2>
+
+				<input
+					id="arr"
+					type="text"
+					placeholder="[0, 1, 2, 3, 4, ...] - Minimum length: 2"
+				/>
+
+				<button id="save-settings">OK</button>
+
 			</div>
 
-			<div class="settings-container">
-				<div>
-					<p>Array to sort:</p>
-					<input
-						id="arr"
-						type="text"
-						placeholder="[0, 1, 2, 3, 4, ...] - Minimum length: 2"
-					/>
-				</div>
+		</div>
 
-				<div>
-					<p>Animation timeout:</p>
-					<input
-						id="timeout"
-						type="number"
-						placeholder="Miliseconds"
-					/>
-				</div>
+		<header>			
+			<div class="gradient-border"></div>
 
-				<div class="errors">
-					<p id="settings-error"></p>
-				</div>
+			<div class="header-container">
 
-				<div class="success">
-					<p id="success"></p>
-				</div>
+			<div id="settings-btn">
+				<!-- <i class="fas fa-bars"></i> -->
+			</div>
 
-				<button id="save-settings">Save</button>
+			<div>
+				<h1>Merge Sort Visualization</h1>
 			</div>
 		</div>
 
-		<header>
-			<div class="header-container">
-				<div id="settings-btn">
-					<i class="fas fa-bars"></i>
-				</div>
+		<div class="gradient-border"></div>
 
-				<div>
-					<h1>Merge Sort Visualization</h1>
-				</div>
-			</div>
-			<div class="gradient-border"></div>
 		</header>
 
 		<main>
@@ -79,7 +56,6 @@
 			</section>
 		</main>
 
-		<script src="vendor/fontawesome/fontawesome.js"></script>
 		<script src="vendor/jquery/jquery.min.js"></script>
 		<script src="js/arrays.js"></script>
 		<script src="js/main.js"></script>
