--- a/merge_visual.html
+++ b/merge_visual.html
@@ -10,37 +10,18 @@
 		<title>Merge Sort Visualization</title>
 
 		<div class="settings">
-
-				<h2>Array to sort:</h2>
-
+				<h2 style="color: black;">Array to sort:</h2>
 				<input
 					id="arr"
 					type="text"
-					placeholder="[0, 1, 2, 3, 4, ...] - Minimum length: 2"
-				/>
-
+					placeholder="ex. 6, 5, 3, 1, 8, 7, 2, 4"/>
+				<br>
 				<button id="save-settings">OK</button>
-
-			</div>
-
+				<button id="random" onclick="generateRandomArray()">Random</button>
 		</div>
 
 		<header>			
-			<div class="gradient-border"></div>
-
-			<div class="header-container">
-
-			<div id="settings-btn">
-				<!-- <i class="fas fa-bars"></i> -->
-			</div>
-
-			<div>
-				<h1>Merge Sort Visualization</h1>
-			</div>
-		</div>
-
 		<div class="gradient-border"></div>
-
 		</header>
 
 		<main>
